# Frontend

./: .gitignore  .licenserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  analysis_options.yaml  chromium.sh  pubspec.yaml
.github/workflows/: build.yml  docs.yml  release.yml  stable.yml  static.yml  tests.yml
assets/locales/: de.json  en.json
data/: address_name.json  fake_locos_service.json  no_address.json  unknown_parameter.json
docs/: CMakeLists.txt  DoxygenLayout.xml  footer.html  header.html  strip_dart_generics_filter.sh  strip_dart_metadata_and_generics_filter.sh
lib/: doxygen.dart  doxygen1.dart  doxygen3.dart  doxygen4.dart  doxygen5.dart  main.dart  prefs.dart
lib/config/: fake_services_provider_container.dart  prefs.dart  ws_batch_size.dart
lib/constant/: current_limits.dart  dcc_bidi_durations.dart  dcc_programming_types.dart  default_settings.dart  doxygen.dart  fake_cvs.dart  fake_initial_cvs.dart  fake_services_provider_container.dart  key_codes.dart  ms_decoder_ids.dart  open_remise_icons.dart  small_screen_width.dart  throttle_size.dart  turnout_map.dart  ws_batch_size.dart
lib/constants/: ack.dart  controller_size.dart  doxygen.dart  fake_provider_container.dart  fake_services_provider_container.dart  initial_cvs.dart  key_codes.dart  ms_decoder_ids.dart  mx_decoder_ids.dart  nak.dart  open_remise_icons.dart  small_screen_width.dart
lib/data/: doxygen.dart
lib/domain/: doxygen.dart
lib/model/: config.dart  connection_status.dart  decoder_db_decoder_detection.dart  decoder_selection.dart  doxygen.dart  info.dart  loco.dart  register.dart  turnout.dart  zpp.dart
lib/models/: bidi.dart  config.dart  controller.dart  controller_window.dart  doxygen.dart  info.dart  loco.dart  ms_database.dart  register.dart  setting.dart  sound_database.dart  zpp.dart  zsu.dart
lib/provider/: available_firmware_version.dart  connection_status.dart  controller_registry.dart  dcc.dart  dcc_service.dart  decoder_filter.dart  decoder_selection.dart  doxygen.dart  filtered_locos.dart  filtered_turnouts.dart  internet_status.dart  locos.dart  mdu_service.dart  ota_service.dart  settings.dart  settings_service.dart  small_width_state.dart  sys.dart  sys_service.dart  text_scaler.dart  throttle_registry.dart  turnouts.dart  z21_connection_state.dart  z21_service.dart  z21_short_circuit.dart  z21_status.dart
lib/providers/: available_firmware_version.dart  controller_windows.dart  dark_mode.dart  dcc.dart  dcc_service.dart  decup_service.dart  domain.dart  domains.dart  doxygen.dart  http_client.dart  internet_status.dart  loco_controllers.dart  locos.dart  mdu_service.dart  ms_database.dart  ota_service.dart  selected_loco_index.dart  service_mode.dart  settings.dart  settings_service.dart  sound_database.dart  sys.dart  sys_service.dart  text_scaler.dart  throttle_registry.dart  z21_service.dart  z21_short_circuit.dart  z21_status.dart  z21_system_state.dart  zusi_mode.dart  zusi_service.dart
lib/screen/: decoders.dart  decoders_screen.dart  doxygen.dart  info.dart  info_screen.dart  program.dart  program_screen.dart  settings.dart  settings_screen.dart  update.dart  update_screen.dart
lib/screens/: decoders_screen.dart  doxygen.dart  info_screen.dart  program_screen.dart  service_screen.dart  settings_screen.dart  sound_screen.dart  update_screen.dart
lib/service/: dcc_service.dart  doxygen.dart  fake_dcc_service.dart  fake_ota_service.dart  fake_settings_service.dart  fake_sys_service.dart  http_dcc_service.dart  http_settings_service.dart  http_sys_service.dart  ota_service.dart  settings_service.dart  sys_service.dart  ws_ota_service.dart
lib/services/: dcc_service.dart  decup_service.dart  doxygen.dart  fake_dcc_service.dart  fake_decup_service.dart  fake_mdu_service.dart  fake_ota_service.dart  fake_settings_service.dart  fake_sys_service.dart  fake_z21_service.dart  fake_zusi_service.dart  http_dcc_service.dart  http_settings_service.dart  http_sys_service.dart  mdu_service.dart  ota_service.dart  settings_service.dart  sys_service.dart  ws_decup_service.dart  ws_mdu_service.dart  ws_ota_service.dart  ws_z21_service.dart  ws_zusi_service.dart  z21_service.dart  zusi_service.dart
lib/ui/: doxygen.dart
lib/utilities/: address_validator.dart  crc32.dart  crc8.dart  cv_number_validator.dart  cv_value_validator.dart  doxygen.dart  exor.dart  ip_address_validator.dart
lib/utility/: cv_number_validator.dart  dark_mode_color_mapper.dart  doxygen.dart  fixed_color_mapper.dart  grayscale_color_mapper.dart  latin1uri.dart  loco_address_validator.dart  reload.dart  turnout_address_validator.dart
lib/utils/: crc32.dart  doxygen.dart  parse_display_format.dart  turnout_map.dart
lib/widget/: default_animated_size.dart  doxygen.dart  error_gif.dart  loading_gif.dart  persistent_expansion_tile.dart  png_picture.dart  positioned_draggable.dart  power_icon_button.dart
lib/widgets/: cab.dart  controller.dart  decup_dialog.dart  delete_loco_dialog.dart  domain_dialog.dart  download_dialog.dart  doxygen.dart  edit_loco_dialog.dart  error_gif.dart  loading_gif.dart  loco_controller.dart  mdu_dialog.dart  ota_dialog.dart  png_picture.dart  positioned_draggable.dart  restart_dialog.dart  short_circuit_dialog.dart  zimo_sound_dialog.dart  zusi_dialog.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
test/model/: decoder_db_test.dart  loco_test.dart  zpp_test.dart  zsu_test.dart
test/models/: loco_test.dart  ms_database_test.dart  sound_database_test.dart  zpp_test.dart  zsu_test.dart
test/service/: z21_service_test.dart
test/services/: z21_service_test.dart
test/utilities/: crc32_test.dart  crc8_test.dart  exor_test.dart
test/utility/: crc32_test.dart  crc8_test.dart  exor_test.dart
test/utils/: crc32_test.dart  crc8_test.dart  parse_display_format_test.dart
web/: index.html  index_beforeunload.html  manifest.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+230 files in other folders)
